Ignores necessary files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@
 *.swp
 *.sh
 .sass-cache/
-**/config/development/
-**/logs/log*.php
-**/logs/!index.html
-**/cache/*
-**/cache/!index.html
-**/cache/!.htaccess
+**/*/config/development/
+**/*/logs/log*.php
+**/*/logs/!index.html
+**/*/cache/*
+**/*/cache/!index.html
+**/*/cache/!.htaccess
 user_guide/
 public/css/main.css
 public/css/main.css.map
